# hopf-layers

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
QA/: create_decisions_xlsx.py  decisions.xlsx
docs/: ARCHITECTURE.md  METHODOLOGY.md
examples/: basic_usage.py  gradient_demo.py  lattice_gauge.py
experiments/exp1_phase_classification/: run_exp1.py
experiments/exp2_topological_charge/: __init__.py  charge_utils.py  run_exp2.py
experiments/exp3_rotation_denoising/: __init__.py  rotation_utils.py  run_exp3.py
experiments/mc_generation/: __init__.py  analytical.py  generate_configs.py  su2_higgs.py  su2_metropolis.py
experiments/mc_generation/configs/: higgs_phase_scan.yaml  pure_gauge_scan.yaml
experiments/shared/: __init__.py  ablations.py  data.py  models.py  training.py
notebooks/: 00_mc_thermalization_validation.ipynb  01_classical_hopf_validation.ipynb  02_real_hopf_validation.ipynb  03_quaternionic_hopf_validation.ipynb  04_phase_classification_analysis.ipynb  05_topological_charge_analysis.ipynb  06_rotation_denoising_analysis.ipynb  07_cross_experiment_ablation.ipynb  08_mutual_information_analysis.ipynb  09_architecture_visualization.ipynb  10_computational_cost_analysis.ipynb  results_utils.py
paper/: README_COMPILATION.md  main.tex  references.bib
paper/figures/: computational_cost_summary.tex  unified_ablation_results.tex
src/hopf_layers/: __init__.py  classical.py  device.py  quaternion.py  quaternionic.py  real.py  reconstruction.py  transitions.py  utils.py
tests/: conftest.py  test_classical_hopf.py  test_gpu.py  test_gradient_flow.py  test_mc.py  test_mc_higgs.py  test_quaternion.py  test_quaternionic_hopf.py  test_real_hopf.py  test_reconstruction.py  test_transitions.py
