[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hopf-layers"
version = "0.1.0"
description = "Differentiable fiber bundle decompositions for geometric deep learning"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ugur Emre" },
]
keywords = [
    "deep-learning",
    "geometric-deep-learning",
    "hopf-fibration",
    "fiber-bundle",
    "quaternion",
    "gauge-theory",
    "pytorch",
    "topology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]
experiments = [
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "pandas>=2.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "jupyter>=1.0",
    "openpyxl>=3.1",
]
all = ["hopf-layers[dev,docs,experiments]"]

[project.urls]
Repository = "https://github.com/uguremrah/hopf-layers"
Documentation = "https://hopf-layers.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
